      an inline function that takes const float*.
    * pgm_read_byte, pgm_read_word and pgm_read_dword remain as they were
      and still take an uint16_t argument for compatibility and legacy code.

  - Added experimental templates pgm_read<> and pgm_read_far<>.  They are
    only available when macro __pgm_read_template__ is defined.

* Issues closed:

  - [patch #9543] Add avrxmega3 devices. #824
  - [bug #49567] Use meta-info from --print-multi-lib and
    --print-multi-directory #642
  - [bug #57071] Fix math.h and function names that block 64-bit
    double #670
  - Issue #476 [bug #32945] RAMPZ clobbered in far-pointer library.
    Functions from the far-pointer library in libc/pmstring like
    memcpy_PF that read from program memory using ELPM must set
    RAMPZ to the high byte of the 24-bit address.  On devices that
    don't use RAMPZ exclusively with ELPM, RAMPZ has to be reset when
    the function is finished.  These are devices with an EBI (External
    Bus Interface): ATxmega64A1, ATxmega64A1U, ATxmega128A1,
    ATxmega128A1U,  ATxmega128A4U.

  - Add device support to avr/power.h for:
    ATtiny441 ATtiny841

* Pull requests:

  - README.md: fix typo in URL #873
  - Added support for AVR-DA and DB devices #881

* Other changes:


*** Changes in avr-libc-2.1.0:

* Improvements and additions:

  - Patch #9187 improved the library coverage for the AVR_TINY
    architecture (ATtiny10 and relatives).  In particular, many
    of the functions from <string.h> are now available there.

  - Patch #8729 adds ISR_NOICF and ISR_FLATTEN to <avr/interrupt.h>

* Bugs fixed:

  [#36933] Documentation no longer correctly describes how to declare
  [#41689] add static_assert to assert.h
  [#48898] power_usart3_* functions no more defined in power.h
  [#49020] dtostre() flags documentation error
  [#49447] Example code for uart_putchar() has error in recursive call
  strings for storage in program memory
  [#50439] avr/iom32u4.h does not define PRTIM4